# codeconz-lighthouses-engine

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  aicontest_spec.txt  analisis-partidas.txt  cfg.yaml  game-20241114-095044.yaml  game.cfg  go.mod  go.sum  index.html  main.go  ppo_run.py  pyproject.toml  randbot.py  reinforce.py  start-game.sh
.github/workflows/: jekyll-gh-pages.yml
cmd/: main.go
cmd/bootstrap/: bootstrap.go
coms/: game.pb.go  game_grpc.pb.go
docker/: Dockerfile.game  Dockerfile.gobot  Dockerfile.gobot1  Dockerfile.gobot2  Dockerfile.pybot
docs/: communications.md  game_end.md  game_engine.md  game_flow.md  go_bot_flow.md  initialState.md  protos.md  py_bot_flow.md  resumen.md  round_end.md  round_init.md  turn_init.md
engine/: client.go  errors.go  game.go  player.go  server.go  state.go
examples/: policy_gradient.ipynb  ppo_run.py  ranbot.go  randbot.py  randbot_old_python.py  reinforce.ipynb  reinforce.py  reinforce_run.py
front/: .gitignore  .prettierrc  README.md  index.html  json.yml  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
front/public/: index.html
front/src/: App.vue  main.ts
internal/engine/: errors.go
internal/handler/: client.go  mapper.go  server.go
maps/: big.txt  island_simple.txt  map.txt  map_43x23_1.txt  map_43x23_3.txt  mapjgm.txt
proto/: game.proto
pyold/: ppo.py
pyold/custom_engine/: README  interface.py  main.py  main_ppo.py  randbot.py  reinforce.py  train.py  (+1 more)
sandbox/: main.py  requirements.txt  train.py
(+78 files in other folders)
