[tool.poetry]
name = "lighthouses-aicontest"
version = "0.1.0"
description = ""
authors = ["Javier Gil <javiergilmont@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
grpclib = "^0.4.7"
protobuf = "^5.28.2"
grpcio = "^1.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
